Add new background for schedule page

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Ananya & Mayank's Wedding">
     <meta property="og:description" content="Join us in celebrating the wedding of Ananya and Mayank.">
-    <meta property="og:image" content="https://www.mayaanya.com/static/images/logo.png">
+    <meta property="og:image" content="https://www.mayaanya.com/static/images/home/logo.png">
     <meta property="og:url" content="https://www.mayaanya.com">
     <meta property="og:type" content="website">
 
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ananya & Mayank's Wedding">
     <meta name="twitter:description" content="Join us in celebrating the wedding of Ananya and Mayank.">
-    <meta name="twitter:image" content="https://www.mayaanya.com/static/images/logo.png">
+    <meta name="twitter:image" content="https://www.mayaanya.com/static/images/home/logo.png">
 </head>
 <body>
 <header>
