--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block title %}Ananya & Mayank{% endblock %}
 {% block content %}
 <div class="main-image">
-    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Ananya & Mayank">
+    <img src="{{ url_for('static', filename='images/home/logo.png') }}" alt="Ananya & Mayank">
 </div>
 <div class="header-content">
     <p>November 21st - 22nd, 2024 <br><br> {{ days_to_go }} DAYS TO GO!</p>
