--- a/templates/travel.html
+++ b/templates/travel.html
@@ -10,6 +10,8 @@
         height: auto; /* Allow the container to adjust height based on content */
         overflow-y: auto; /* Enable vertical scrolling for the entire container */
         align-items: stretch; /* Make sure child items stretch to the same height */
+        background: url('../static/images/travel/background.png') no-repeat center center fixed;
+        background-size: cover;
     }
     @media (min-width: 768px) {
         .travel-page-container {
@@ -55,9 +57,10 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start; /* Ensure content starts at the top */
-        background-color: rgba(255, 255, 255, 0.2); /* White with 20% opacity */
+        background-color: rgba(255, 255, 255, 0); /* White with 20% opacity */
         backdrop-filter: blur(10px); /* Optional: adds a blur effect behind the text */
         color: #333; /* Text color */
+        border-radius: 8px; /* Optional: adds rounded corners */
     }
     @media (min-width: 768px) {
         .travel-content {
