--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -20,7 +20,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url('static/images/schedule/schedule-background.png');
+        background-image: url('../static/images/schedule/background.png');
         background-size: cover;
         background-position: center;
         opacity: 0.5;
