--- a/templates/auth.html
+++ b/templates/auth.html
@@ -24,6 +24,10 @@
         width: 100%;
         margin: 20px;
         height: auto;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* Vertically center content */
     }
     .schedule-container h2 {
         font-family: 'Cinzel', serif;
