Modify backgrounds and create separate folder for backgrounds

--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -3,7 +3,7 @@
 {% block content %}
 <style>
     .background-wrapper {
-        background: url('static/images/rsvp/background.png') no-repeat center center fixed;
+        background: url('../static/images/backgrounds/background-2.png') no-repeat center center fixed;
         background-size: cover;
         padding: 20px;
         display: flex;
