--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,24 @@
 {% extends "base.html" %}
 {% block title %}Ananya & Mayank{% endblock %}
 {% block content %}
-<div class="main-image">
-    <img src="{{ url_for('static', filename='images/home/logo.png') }}" alt="Ananya & Mayank">
-</div>
-<div class="header-content">
-    <p>November 21st - 22nd, 2024 <br><br> {{ days_to_go }} DAYS TO GO!</p>
+<style>
+    .background-wrapper {
+        background: url('../static/images/backgrounds/background-2.png') no-repeat center center fixed;
+        background-size: cover;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh; /* Ensures the background covers the full viewport height */
+    }
+</style>
+<div class="background-wrapper">
+    <div class="main-image">
+        <img src="{{ url_for('static', filename='images/home/logo.png') }}" alt="Ananya & Mayank">
+    </div>
+    <div class="header-content">
+        <p>November 21st - 22nd, 2024 <br><br> {{ days_to_go }} DAYS TO GO!</p>
+    </div>
 </div>
 {% endblock %}
