Update FAQ page text

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -107,61 +107,60 @@
         <div class="faq-item">
             <button class="faq-question">What is the date and location of the wedding?</button>
             <div class="faq-answer">
-                <p>The wedding will take place on November 21st, 2024 in Jaipur, India.</p>
+                <p>The wedding will take place on November 21-22 in <a href="https://samode.com/samode-bagh/">
+                    Samode Bagh, Jaipur. </a></p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">What time should I arrive?</button>
             <div class="faq-answer">
-                <p>Please arrive by 4:00 PM for the ceremony. The reception will follow immediately after.</p>
+                <p>Wedding celebrations kick off on November 21 from 12 pm onwards.
+                    Please plan your arrival by around 11am.</p>
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">What is the dress code?</button>
+            <button class="faq-question">Do the events have any dress code?</button>
             <div class="faq-answer">
-                <p>The dress code is formal. Please wear traditional Indian attire or formal Western wear.</p>
+                <p>Wear anything you’d like, no pressure at all.
+                    We have given suggestions for attire if you want but wear anything you’d be comfortable in! </p>
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">Is there parking available at the venue?</button>
+            <button class="faq-question">Will transportation be provided between airport / train station and venue?</button>
             <div class="faq-answer">
-                <p>Yes, there is ample parking available at the venue.</p>
+                <p>Yes, if you’re arriving on November 21 at the airport / train station.
+                    We can coordinate for a pick-up. Please share this information on the <a href="{{ url_for('rsvp') }}">RSVP page</a>.</p>
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">Are children welcome?</button>
+            <button class="faq-question">How do I RSVP? And what is the deadline?</button>
             <div class="faq-answer">
-                <p>Yes, children are welcome to attend the wedding.</p>
+                <p>Tada - <a href="{{ url_for('rsvp') }}">here </a>you go. Please RSVP by August 15th so that we can have a accurate headcount. </p>
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">What should I do if I have dietary restrictions?</button>
+            <button class="faq-question">What will the weather be like?</button>
             <div class="faq-answer">
-                <p>Please let us know your dietary restrictions when you RSVP, and we will accommodate your needs.</p>
+                <p>29° / 13° (84° - 55° F) in winters. Nights will get cold so definitely carry some warm layers as most events are outdoors. </p>
+            </div>
+        </div>
+        <div class="faq-item">
+            <button class="faq-question">What should I do if I have any dietary restrictions?</button>
+            <div class="faq-answer">
+                <p>Most events will have traditional Indian food.
+                    Please let us know your dietary restrictions on the <a href="{{ url_for('rsvp') }}">RSVP page</a> and we will try to accommodate to our best ability. </p>
             </div>
         </div>
         <div class="faq-item">
             <button class="faq-question">Can I bring a plus one?</button>
             <div class="faq-answer">
-                <p>We have limited space at the venue, so we request that only guests named on the invitation attend.</p>
+                <p>If your invite says “and family / guest” then yes, otherwise we’d love it if it was just you :) </p>
             </div>
         </div>
         <div class="faq-item">
-            <button class="faq-question">Will transportation be provided?</button>
+            <button class="faq-question">Who do I contact if I have additional questions?</button>
             <div class="faq-answer">
-                <p>We will provide shuttle services from select hotels to the venue. Please check the travel page for more details.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">How do I RSVP?</button>
-            <div class="faq-answer">
-                <p>You can RSVP on our website by visiting the RSVP page.</p>
-            </div>
-        </div>
-        <div class="faq-item">
-            <button class="faq-question">Who can I contact if I have additional questions?</button>
-            <div class="faq-answer">
-                <p>If you have any other questions, please contact us at [Your Contact Information].</p>
+                <p>Reach out to us! We’ll be more than happy to help.</p>
             </div>
         </div>
     </div>
