--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -10,7 +10,7 @@
         height: auto; /* Allow the container to adjust height based on content */
         overflow-y: auto; /* Enable vertical scrolling for the entire container */
         align-items: stretch; /* Make sure child items stretch to the same height */
-        background: url('static/images/backgrounds/background.png') no-repeat center center fixed;
+        background: url('../static/images/backgrounds/background.png') no-repeat center center fixed;
         background-size: cover;
     }
     @media (min-width: 768px) {
@@ -23,7 +23,7 @@
         flex: 1;
         position: relative;
         max-width: 100%;
-        height: 50vh; /* Ensure the image container takes up half the height on mobile */
+        height: auto; /* Ensure the image container takes up the appropriate height on mobile */
         overflow: hidden;
         display: flex;
         align-items: center; /* Align items to the center */
